; ModuleID = '/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-audio-decoder.c_shrink_packet.c'
source_filename = "/home/carl/AnghaBench/obs-studio/deps/libff/libff/extr_ff-audio-decoder.c_shrink_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ff_packet = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ff_packet*, i32)* @shrink_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @shrink_packet(%struct.ff_packet* %0, i32 %1) #0 {
  %3 = alloca %struct.ff_packet*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.ff_packet* %0, %struct.ff_packet** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.ff_packet*, %struct.ff_packet** %3, align 8
  %8 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp sle i32 %6, %10
  br i1 %11, label %12, label %36

12:                                               ; preds = %2
  %13 = load %struct.ff_packet*, %struct.ff_packet** %3, align 8
  %14 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* %4, align 4
  %18 = sub nsw i32 %16, %17
  store i32 %18, i32* %5, align 4
  %19 = load %struct.ff_packet*, %struct.ff_packet** %3, align 8
  %20 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %19, i32 0, i32 0
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  %23 = load %struct.ff_packet*, %struct.ff_packet** %3, align 8
  %24 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %26, i64 %28
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @memmove(i32* %22, i32* %29, i32 %30)
  %32 = load %struct.ff_packet*, %struct.ff_packet** %3, align 8
  %33 = getelementptr inbounds %struct.ff_packet, %struct.ff_packet* %32, i32 0, i32 0
  %34 = load i32, i32* %5, align 4
  %35 = call i32 @av_shrink_packet(%struct.TYPE_2__* %33, i32 %34)
  br label %36

36:                                               ; preds = %12, %2
  ret void
}

declare dso_local i32 @memmove(i32*, i32*, i32) #1

declare dso_local i32 @av_shrink_packet(%struct.TYPE_2__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
